[gd_scene load_steps=6 format=3 uid="uid://b6xktx235a6bd"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_v6mkc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yb18"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yduo5"]
size = Vector2(184, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ru6na"]
size = Vector2(58, 184)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0f4n"]
size = Vector2(184, 184)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_v6mkc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8yb18")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="Melee" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee"]
shape = SubResource("RectangleShape2D_yduo5")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Melee"]
shape = SubResource("RectangleShape2D_ru6na")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="DetectionAndRanged" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionAndRanged"]
shape = SubResource("RectangleShape2D_q0f4n")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="BattleTurn" type="Timer" parent="."]

[connection signal="body_entered" from="Melee" to="." method="_on_melee_body_entered"]
[connection signal="body_exited" from="Melee" to="." method="_on_melee_body_exited"]
[connection signal="body_entered" from="DetectionAndRanged" to="." method="_on_detection_and_ranged_body_entered"]
[connection signal="body_exited" from="DetectionAndRanged" to="." method="_on_detection_and_ranged_body_exited"]
[connection signal="timeout" from="BattleTurn" to="." method="_on_battle_turn_timeout"]
